Acrescentado valor das vendas

--- a/vendas-page.html
+++ b/vendas-page.html
@@ -11,5 +11,6 @@
 <body>
         <h1>Página de Vendas</h1>
         <a href="./index.html">Home</a>
+        <p>Vendas total R$5,000</p>
 </body>
 </html>
